--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,3 +10,18 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.App-header {
+  background-color: aqua;
+  height: 5vh;
+}
+
+.App-main {
+  background-color: lightgreen;
+  height: 90vh;
+}
+
+.App-footer {
+  background-color: lightskyblue;
+  height: 5vh;
+}
